--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -6,20 +6,20 @@
 
 @layer base {
     :root {
-        --background: 0 0% 100%;
-        --foreground: 0 0% 3.9%;
+        --background: 0 0% 100%; /*white*/
+        --foreground: 0 0% 3.9%; /*black*/
 
         --card: 0 0% 100%;
         --card-foreground: 0 0% 3.9%;
 
         --popover: 0 0% 100%;
-        --popover-foreground: 0 0% 3.9%;
+        --popover-foreground: 0 0% 3.9%; /*black*/
 
-        --primary: 0 0% 9%;
+        --primary: 0 0% 9%; /*black*/
         --primary-foreground: 0 0% 98%;
 
         --secondary: 0 0% 96.1%;
-        --secondary-foreground: 0 0% 9%;
+        --secondary-foreground: 0 0% 9%; /*black*/
 
         --muted: 0 0% 96.1%;
         --muted-foreground: 0 0% 45.1%;
